[gd_scene load_steps=9 format=3 uid="uid://pph1e00o257u"]

[ext_resource type="Texture2D" uid="uid://c7wt5f2qinnlu" path="res://TutorialAssets/Pickles/pickle3.png" id="1_7dm1i"]
[ext_resource type="Script" uid="uid://86tir33mc2pp" path="res://Scripts/UI/ProjectManager/project_selector.gd" id="1_rk6h8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rk6h8"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fkh7x"]
bg_color = Color(0, 0, 0, 0.137255)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ahq4h"]
bg_color = Color(1, 1, 1, 0.137255)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oqjr0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_opnes"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oqjr0"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0, 0, 0.376471, 0.0980392)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ProjectSelector" type="PanelContainer"]
custom_minimum_size = Vector2(0, 100)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_rk6h8")

[node name="Selection" type="Button" parent="."]
layout_mode = 2
focus_mode = 1
theme_override_styles/focus = SubResource("StyleBoxFlat_rk6h8")
theme_override_styles/disabled = SubResource("StyleBoxFlat_fkh7x")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ahq4h")
theme_override_styles/hover = SubResource("StyleBoxFlat_ahq4h")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oqjr0")
theme_override_styles/normal = SubResource("StyleBoxEmpty_opnes")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBox" type="HBoxContainer" parent="Margin"]
layout_mode = 2
mouse_filter = 2

[node name="ProjectIcon" type="TextureRect" parent="Margin/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_7dm1i")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 10

[node name="HBox" type="HBoxContainer" parent="Margin/HBox/VBoxContainer"]
layout_mode = 2

[node name="ProjectName" type="Label" parent="Margin/HBox/VBoxContainer/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_oqjr0")
text = "Project Name"
text_overrun_behavior = 3

[node name="ProjectType" type="Label" parent="Margin/HBox/VBoxContainer/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_oqjr0")
text = "Type"

[node name="ProjectPath" type="Label" parent="Margin/HBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_oqjr0")
text = "Project Path"
text_overrun_behavior = 3

[connection signal="pressed" from="Selection" to="." method="_on_selection_pressed"]
